# DistPsych

./: .gitignore  README.md  distpsych.py  pyproject.toml  requirements.txt
.github/workflows/: exe.yml
distpsych/: main.py
