[project]
name = "distpsych"
version = "0.1.0"
description = "A tool for matching psychology clients with providers based on location and insurance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "customtkinter>=5.2.2",
    "logzero>=1.7.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
